--- a/apps/k3s/traefik/base/deployment.yaml
+++ b/apps/k3s/traefik/base/deployment.yaml
@@ -104,7 +104,12 @@ spec:
           - "--metrics.prometheus.entrypoint=metrics"
           - "--providers.kubernetescrd"
           - "--providers.kubernetescrd.labelSelector=method=traefik"
+          - "--providers.kubernetescrd.allowCrossNamespace=true"
+          - "--providers.kubernetescrd.allowExternalNameServices=true"
+          - "--providers.kubernetescrd.allowEmptyServices=true"
           - "--providers.kubernetesingress"
+          - "--providers.kubernetesingress.allowExternalNameServices=true"
+          - "--providers.kubernetesingress.allowEmptyServices=true"
           - "--providers.kubernetesingress.labelSelector=method=traefik"
           - "--entrypoints.websecure.http.tls=true"
           - "--log.level=DEBUG"
