--- a/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
+++ b/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
@@ -12,5 +12,5 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  postgresql-postgres-password: "cFFybWc0cXpQVg=="
+  postgresql-postgres-password: "MzBTVjNkak1HVQ=="
   postgresql-password: "a2V5Y2xvYWs="
