update harbor and cert-manager

--- a/apps/k3s/harbor/overlay/common/kustomization.yaml
+++ b/apps/k3s/harbor/overlay/common/kustomization.yaml
@@ -3,6 +3,8 @@ bases:
 # namespace: examples
 # namePrefix: example-
 # nameSuffix: "-k"
+# resources:
+# - traefik-ingress.yaml
 commonAnnotations:
   note: generated
 commonLabels:
