--- a/apps/k3s/harbor/base/ingress/ingress.yaml
+++ b/apps/k3s/harbor/base/ingress/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
     release: harbor
     chart: harbor
     app: "harbor"
+    method: traefik
   annotations:
     ingress.kubernetes.io/proxy-body-size: "0"
     ingress.kubernetes.io/ssl-redirect: "true"
@@ -18,7 +19,7 @@ spec:
   tls:
   - secretName: harbor-ingress
     hosts:
-    - core.harbor.domain
+    - core.harbor.themachine
   rules:
   - http:
       paths:
@@ -64,7 +65,7 @@ spec:
             name: harbor-portal
             port:
               number: 80
-    host: core.harbor.domain
+    host: core.harbor.themachine
 ---
 # Source: harbor/templates/ingress/ingress.yaml
 apiVersion: networking.k8s.io/v1
@@ -76,6 +77,7 @@ metadata:
     release: harbor
     chart: harbor
     app: "harbor"
+    method: traefik
   annotations:
     ingress.kubernetes.io/proxy-body-size: "0"
     ingress.kubernetes.io/ssl-redirect: "true"
@@ -85,7 +87,7 @@ spec:
   tls:
   - secretName: harbor-ingress
     hosts:
-    - notary.harbor.domain
+    - notary.harbor.themachine
   rules:
   - http:
       paths:
@@ -96,4 +98,4 @@ spec:
             name: harbor-notary-server
             port:
               number: 4443
-    host: notary.harbor.domain
+    host: notary.harbor.themachine
