--- a/apps/k3s/.gitignore
+++ b/apps/k3s/.gitignore
@@ -1,5 +1,4 @@
-**/secret.yaml
-**/*-secret.yaml
-**/core-secret.yaml
-**/secrets.yaml
-**/*-secrets.yaml
+*secret.yaml
+*secrets.yaml
+*secret.yml
+*secrets.yml
