--- a/apps/k3s/harbor/base/trivy/trivy-sts.yaml
+++ b/apps/k3s/harbor/base/trivy/trivy-sts.yaml
@@ -46,7 +46,7 @@ spec:
             - name: HTTPS_PROXY
               value: ""
             - name: NO_PROXY
-              value: "harbor-core,harbor-jobservice,harbor-database,harbor-chartmuseum,harbor-notary-server,harbor-notary-signer,harbor-registry,harbor-portal,harbor-trivy,harbor-exporter,127.0.0.1,localhost,.local,.internal,themachine"
+              value: "harbor-core,harbor-jobservice,harbor-database,harbor-chartmuseum,harbor-notary-server,harbor-notary-signer,harbor-registry,harbor-portal,harbor-trivy,harbor-exporter,127.0.0.1,localhost,.local,.internal,harbor.themachine,core.harbor.themachine,notary.harbor.themachine"
             - name: "SCANNER_LOG_LEVEL"
               value: "info"
             - name: "SCANNER_TRIVY_CACHE_DIR"
