harbor and traefik updates

--- a/apps/k3s/harbor/values.yaml
+++ b/apps/k3s/harbor/values.yaml
@@ -406,7 +406,7 @@ proxy:
     - trivy
 
 # Run the migration job via helm hook
-enableMigrateHelmHook: false
+enableMigrateHelmHook: false # TODO!!!
 
 # The custom ca bundle secret, the secret must contain key named "ca.crt"
 # which will be injected into the trust store for chartmuseum, core, jobservice, registry, trivy components
