minor updates for installing nvidia

--- a/apps/k3s/nvidia/nvidia-config.yaml
+++ b/apps/k3s/nvidia/nvidia-config.yaml
@@ -5,5 +5,5 @@ flags:
   nvidiaDriverRoot: "/"
   plugin:
     passDeviceSpecs: false
-    deviceListStrategy: envvar
-    deviceIDStrategy: uuid
+    deviceListStrategy: "envvar"
+    deviceIDStrategy: "uuid"
