--- a/provision/ansible/roles/create_ansible_user/tasks/main.yaml
+++ b/provision/ansible/roles/create_ansible_user/tasks/main.yaml
@@ -11,6 +11,7 @@
     state: present
     validate: '/usr/sbin/visudo -cf %s'
   become: true
+  become_user: root
 
 - name: create .ssh
   ansible.builtin.file:
