--- a/provision/ansible/roles/common/tasks/main.yaml
+++ b/provision/ansible/roles/common/tasks/main.yaml
@@ -1,6 +1,10 @@
 - name: Basic info
   block:
     - name: Task 1
+      shell: id
+      changed_when: False
+      failed_when: False
+    - name: Task 1
       shell: env
       changed_when: False
       failed_when: False
