--- a/provision/ansible/roles/create_ansible_user/tasks/main.yaml
+++ b/provision/ansible/roles/create_ansible_user/tasks/main.yaml
@@ -3,6 +3,7 @@
     name: ansible
     state: present
   become: true
+  become_user: root
 
 - name: Allow ansible user to run sudo without a password
   lineinfile:
@@ -13,21 +14,33 @@
   become: true
   become_user: root
 
-- name: create .ssh
-  ansible.builtin.file:
-    path: /home/ansible/.ssh/
-    state: directory
-    owner: ansible
-    mode: 0700
+- name: setup ssh as ansible user
   become: true
   become_user: ansible
-
-- name: Generate SSH key pair
-  community.crypto.openssh_keypair:
-    type: rsa
-    path: /home/ansible/.ssh/id_rsa
-    owner: ansible
-    mode: 0600
-  become: true
-  become_user: ansible
-  
+  block:
+  - name: create .ssh
+    ansible.builtin.file:
+      path: /home/ansible/.ssh/
+      state: directory
+      owner: ansible
+      mode: 0700
+  - name: Generate SSH key pair
+    community.crypto.openssh_keypair:
+      type: rsa
+      path: /home/ansible/.ssh/id_rsa
+      owner: ansible
+      mode: 0600
+  - name: Get public key
+    slurp:
+      src: /home/ansible/.ssh/id_rsa.pub
+    register: pub_key
+  # - name: add localhost to known_hosts
+  #   known_hosts:
+  #     path: /home/ansible/.ssh/known_hosts
+  #     name: "{{ ansible_fqdn }}"
+  #     key: "{{ pub_key['content'] | b64decode }}"
+  - name: Set authorized key
+    authorized_key:
+      user: ansible
+      state: present
+      key: "{{ pub_key['content'] | b64decode }}"
