--- a/provision/ansible/ansible.cfg.in
+++ b/provision/ansible/ansible.cfg.in
@@ -297,7 +297,7 @@ verbosity=0
 # This setting defaults to False because there is a chance that you have sensitive values in your parameters and you do not want those to be printed.
 # If you set this to True you should be sure that you have secured your environment's stdout (no one can shoulder surf your screen and you aren't saving stdout to an insecure file) or made sure that all of your playbooks explicitly added the ``no_log: True`` parameter to tasks which have sensitive values See How do I keep secret data in my playbook? for more information.
 ;display_args_to_stdout=False
-display_args_to_stdout=True
+;display_args_to_stdout=True
 
 # (boolean) Toggle to control displaying skipped task/host entries in a task in the default callback
 ;display_skipped_hosts=True
