--- a/provision/ansible/roles/install_k3s/tasks/install_k3s.yaml
+++ b/provision/ansible/roles/install_k3s/tasks/install_k3s.yaml
@@ -1,4 +1,4 @@
-- name: Packages
+- name: DNF packages
   set_fact:
     dnf_packages:
       - vim
@@ -12,7 +12,7 @@
       - etcd
       - python3-pip
 
-- name: Install packages
+- name: Install dnf packages
   dnf:
     name: "{{ dnf_packages }}"
     state: present
