--- a/provision/ansible/roles/install_k3s/tasks/install_helm.yaml
+++ b/provision/ansible/roles/install_k3s/tasks/install_helm.yaml
@@ -1,19 +1,1 @@
-- name: DNF packages
-  set_fact:
-    dnf_packages:
-      - vim
-      - google-chrome-stable
-      - git
-      - openssl
-      - containerd
-      - kernel-devel
-      - kernel-headers
-      - kernel-tools
-      - etcd
-      - python3-pip
-
-- name: Install dnf packages
-  dnf:
-    name: "{{ dnf_packages }}"
-    state: present
-  become: true
+        curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
