--- a/provision/ansible/roles/install_k3s/tasks/install_k3s.yaml
+++ b/provision/ansible/roles/install_k3s/tasks/install_k3s.yaml
@@ -1,19 +1,6 @@
-- name: DNF packages
-  set_fact:
-    dnf_packages:
-      - vim
-      - google-chrome-stable
-      - git
-      - openssl
-      - containerd
-      - kernel-devel
-      - kernel-headers
-      - kernel-tools
-      - etcd
-      - python3-pip
 
-- name: Install dnf packages
-  dnf:
-    name: "{{ dnf_packages }}"
-    state: present
-  become: true
+    sudo mkdir -p /etc/rancher/k3s/
+    sudo chmod -R 777 /etc/rancher
+    cp k3s/config.yaml /etc/rancher/k3s/
+    sudo swapoff -a
+    curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=traefik" INSTALL_K3S_SKIP_ENABLE=true INSTALL_K3S_SKIP_START=true sh -s - server
