update with podman to run ansible to run podman to run git

--- a/provision/ansible/inventories/production/hosts.yaml
+++ b/provision/ansible/inventories/production/hosts.yaml
@@ -5,4 +5,15 @@ all:
     local_machine:
       hosts:
         localhost
+    master:
+      hosts:
+        localhost
+    node:
+      hosts:
+        localhost
+    k3s_cluster:
+      children:
+        hosts:
+          master:
+          node:
   
