--- a/provision/ansible/playbooks/provision.yaml
+++ b/provision/ansible/playbooks/provision.yaml
@@ -1,10 +1,10 @@
 - name: Playbook
   hosts: local_machine
   roles:
-    - common
-    - basic_linux_packages
-    - install_rpm_fusion
-    - install_vscode
-    # - install_k3s
+    # - common
+    # - basic_linux_packages
+    # - install_rpm_fusion
+    # - install_vscode
+    - install_k3s
     # - install_nvidia
     # - install_nvidia_k3s
